# giter

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: cron.yml  rust.yml
src/: errors.rs  lib.rs  main.rs
src/caller/: browser.rs
src/config/: config.rs
src/drawer/: terminal.rs
src/k8s/: mod.rs  ns.rs  pods.rs
src/storage/: common.rs  json_storage.rs  mod.rs  storage.rs
