[package]
name = "giter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.29.0"
kube = "1.0.0"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
open = "5.0.1"
ratatui = "0.29.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
